			       =================
				BOGOFILTER NEWS
			       =================

NOTE: More information on important changes for bogofilter updaters
is in the RELEASE.NOTES files.  Read them!!

0.92.8	2004-10-??

	2004-10-13

	* Ignore 'X-Bogosity' lines in mime attachments.

	2004-10-12

	* Revise lexer variables for flex-2.5.31 compatibility.

	2004-10-10

	* OS/2 compatibility fixes for configure, bogofilter, and
          bogoutil (thanks to Yuri Dario).

	2004-10-09

	* Fix a potential crash on malformatted input (writing a NUL byte to
	  the wrong place) in the RFC-2047 decoder. Reported by Clint Adams.

0.92.7	2004-10-02

	* '-M' allows processing 1 msg-count file with multiple
	  messages.  Otherwise allow multiple msg-count files with 1
	  message in each.

	2004-09-30

	* Allow only one of '-d' and '-D' options for bogotune.

	2004-09-28

	* Remove check for bogohome since it breaks "bogotune -D".

	2004-09-25

	* Fixed minor formatting defects in bogotune.
	* Fixed bogotune man page error for "-d" option.
	* Additional portability fix for SunOS 4.1.X

	2004-09-23

	* Fixed help messages for bogofilter's "-m" and "-o" options.

	2004-09-10

	* bogofilter-tuning.HOWTO revised and converted to html.

	2004-09-05

	* Ensure that robx computation uses a regular wordlist (rather
          than an ignore list) to avoid a seg fault in bogotune.
	  
	2004-08-30
	* Remove bogus 'P' in bogolexer's allowed option list.

0.92.6	2004-08-22

	* Revise "-QQ" output so it can be used (unchanged) in a
          config file.
	* Remove obsolete "--with-db" option from configure.ac

0.92.5	2004-08-20

	2004-08-17

	* Expanded discussion of long options in bogofilter's man page.
	* Merged files RELEASE.NOTES-0.1? into cumulative
	  RELEASE.NOTES file.
	* Removed files CHANGES-0.1? as they duplicate info in NEWS.

	2004-08-16

	* Added "-QQ" option to bogofilter to display extended
          parameter list.

	2004-08-15

	* Documentation update.  Sample configure commands now use